@@ -37,8 +37,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.IntPredicate;
@@ -80,22 +79,22 @@ public class PartitionChangeBuilderTest {
         assertTrue(changeRecordIsNoOp(new PartitionChangeRecord()));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().setLeader(1)));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
-            setIsr(Arrays.asList(1, 2, 3))));
+            setIsr(List.of(1, 2, 3))));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
-            setRemovingReplicas(Collections.singletonList(1))));
+            setRemovingReplicas(List.of(1))));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
-            setAddingReplicas(Collections.singletonList(4))));
+            setAddingReplicas(List.of(4))));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
-                setEligibleLeaderReplicas(Collections.singletonList(5))));
+                setEligibleLeaderReplicas(List.of(5))));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
-                setLastKnownElr(Collections.singletonList(6))));
+                setLastKnownElr(List.of(6))));
         assertFalse(
             changeRecordIsNoOp(
                 new PartitionChangeRecord()
                   .setLeaderRecoveryState(LeaderRecoveryState.RECOVERED.value())
             )
         );
-        assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().setDirectories(Arrays.asList(
+        assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().setDirectories(List.of(
                 Uuid.fromString("5JwD0VNXRV2Wr9CCON38Tw"),
                 Uuid.fromString("zpL1bRzTQXmmgdxlLHOWuw"),
                 Uuid.fromString("6iGUpAkHQXC6bY0FTcPRDw")
@@ -270,16 +269,16 @@ public class PartitionChangeBuilderTest {
         assertElectLeaderEquals(createFooBuilder(version), 1, false);
         assertElectLeaderEquals(createFooBuilder(version).setElection(Election.UNCLEAN), 1, false);
         assertElectLeaderEquals(createFooBuilder(version)
-            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 3))), 1, false);
+            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 3))), 1, false);
         assertElectLeaderEquals(createFooBuilder(version).setElection(Election.UNCLEAN)
-            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 3))), 1, false);
+            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 3))), 1, false);
         assertElectLeaderEquals(createFooBuilder(version)
-            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Collections.singletonList(3))), NO_LEADER, false);
+            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(3))), NO_LEADER, false);
         assertElectLeaderEquals(createFooBuilder(version).setElection(Election.UNCLEAN).
-            setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Collections.singletonList(3))), 2, true);
+            setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(3))), 2, true);
         assertElectLeaderEquals(
             createFooBuilder(version).setElection(Election.UNCLEAN)
-                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Collections.singletonList(4))).setTargetReplicas(Arrays.asList(2, 1, 3, 4)),
+                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(4))).setTargetReplicas(List.of(2, 1, 3, 4)),
             4,
             false
         );
@@ -317,7 +316,7 @@ public class PartitionChangeBuilderTest {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
             createFooBuilder(metadataVersion).setTargetIsrWithBrokerStates(
-                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1))),
+                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1))),
             new PartitionChangeRecord(),
             NO_LEADER_CHANGE);
     }
@@ -332,7 +331,7 @@ public class PartitionChangeBuilderTest {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
             createFooBuilder(metadataVersion).setTargetIsrWithBrokerStates(
-                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1))),
+                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1))),
             new PartitionChangeRecord(),
             1);
     }
@@ -346,7 +345,7 @@ public class PartitionChangeBuilderTest {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
             createFooBuilder(metadataVersion).setTargetIsrWithBrokerStates(
-                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1, 3, 4))),
+                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1, 3, 4))),
             new PartitionChangeRecord(),
             NO_LEADER_CHANGE);
     }
@@ -360,7 +359,7 @@ public class PartitionChangeBuilderTest {
     public void testLeaderEpochBumpOnNewReplicaSetDisjoint(String metadataVersionString) {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
-            createFooBuilder(metadataVersion).setTargetReplicas(Arrays.asList(2, 1, 4)),
+            createFooBuilder(metadataVersion).setTargetReplicas(List.of(2, 1, 4)),
             new PartitionChangeRecord(),
             1);
     }
@@ -392,7 +391,7 @@ public class PartitionChangeBuilderTest {
             2).
             setEligibleLeaderReplicasEnabled(metadataVersion.isElrSupported()).
             setDefaultDirProvider(DEFAULT_DIR_PROVIDER).
-            setTargetReplicas(Collections.emptyList());
+            setTargetReplicas(List.of());
         PartitionChangeRecord record = new PartitionChangeRecord();
         builder.triggerLeaderEpochBumpForIsrShrinkIfNeeded(record);
         assertEquals(NO_LEADER_CHANGE, record.leader());
@@ -419,14 +418,14 @@ public class PartitionChangeBuilderTest {
                     new PartitionChangeRecord()
                       .setTopicId(FOO_ID)
                       .setPartitionId(0)
-                      .setIsr(Arrays.asList(2, 1)),
+                      .setIsr(List.of(2, 1)),
                     version
                 )
             ),
             // Actual
             createFooBuilder(version)
               .setTargetIsrWithBrokerStates(
-                  AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1))
+                  AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1))
               )
               .build()
         );
@@ -438,10 +437,10 @@ public class PartitionChangeBuilderTest {
         assertEquals(Optional.of(new ApiMessageAndVersion(new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setIsr(Arrays.asList(2, 3)).
+                setIsr(List.of(2, 3)).
                 setLeader(2), version)),
             createFooBuilder(version).setTargetIsrWithBrokerStates(AlterPartitionRequest.
-                newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 3))).build());
+                newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 3))).build());
     }
 
     @ParameterizedTest
@@ -450,13 +449,13 @@ public class PartitionChangeBuilderTest {
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(3, 2, 1));
+                setReplicas(List.of(3, 2, 1));
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(FOO.replicas, FOO.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(3), dirs.get(2), dirs.get(1)));
+            expectedRecord.setDirectories(List.of(dirs.get(3), dirs.get(2), dirs.get(1)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
-            createFooBuilder(version).setTargetReplicas(Arrays.asList(3, 2, 1)).build());
+            createFooBuilder(version).setTargetReplicas(List.of(3, 2, 1)).build());
     }
 
     @ParameterizedTest
@@ -465,43 +464,43 @@ public class PartitionChangeBuilderTest {
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(BAR_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(2, 3, 4)).
-                setIsr(Arrays.asList(2, 3, 4)).
+                setReplicas(List.of(2, 3, 4)).
+                setIsr(List.of(2, 3, 4)).
                 setLeader(2).
-                setRemovingReplicas(Collections.emptyList()).
-                setAddingReplicas(Collections.emptyList());
+                setRemovingReplicas(List.of()).
+                setAddingReplicas(List.of());
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(BAR.replicas, BAR.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(2), dirs.get(3), dirs.get(4)));
+            expectedRecord.setDirectories(List.of(dirs.get(2), dirs.get(3), dirs.get(4)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createBarBuilder(version).setTargetIsrWithBrokerStates(AlterPartitionRequest.
-                newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2, 3, 4))).build());
+                newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2, 3, 4))).build());
     }
 
     @ParameterizedTest
     @MethodSource("partitionChangeRecordVersions")
     public void testRevertReassignment(short version) {
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(BAR);
-        assertEquals(Arrays.asList(1, 2, 3), revert.replicas());
-        assertEquals(Arrays.asList(1, 2, 3), revert.isr());
+        assertEquals(List.of(1, 2, 3), revert.replicas());
+        assertEquals(List.of(1, 2, 3), revert.isr());
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(BAR_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(1, 2, 3)).
+                setReplicas(List.of(1, 2, 3)).
                 setLeader(1).
-                setRemovingReplicas(Collections.emptyList()).
-                setAddingReplicas(Collections.emptyList());
+                setRemovingReplicas(List.of()).
+                setAddingReplicas(List.of());
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(BAR.replicas, BAR.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(1), dirs.get(2), dirs.get(3)));
+            expectedRecord.setDirectories(List.of(dirs.get(1), dirs.get(2), dirs.get(3)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createBarBuilder(version).
                 setTargetReplicas(revert.replicas()).
                 setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(revert.isr())).
-                setTargetRemoving(Collections.emptyList()).
-                setTargetAdding(Collections.emptyList()).
+                setTargetRemoving(List.of()).
+                setTargetAdding(List.of()).
                 build());
     }
 
@@ -509,19 +508,19 @@ public class PartitionChangeBuilderTest {
     @MethodSource("partitionChangeRecordVersions")
     public void testRemovingReplicaReassignment(short version) {
         PartitionReassignmentReplicas replicas = new PartitionReassignmentReplicas(
-            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(Arrays.asList(1, 2)));
-        assertEquals(Collections.singletonList(3), replicas.removing());
-        assertEquals(Collections.emptyList(), replicas.adding());
-        assertEquals(Arrays.asList(1, 2, 3), replicas.replicas());
+            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(List.of(1, 2)));
+        assertEquals(List.of(3), replicas.removing());
+        assertEquals(List.of(), replicas.adding());
+        assertEquals(List.of(1, 2, 3), replicas.replicas());
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(1, 2)).
-                setIsr(Arrays.asList(2, 1)).
+                setReplicas(List.of(1, 2)).
+                setIsr(List.of(2, 1)).
                 setLeader(1);
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(FOO.replicas, FOO.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(1), dirs.get(2)));
+            expectedRecord.setDirectories(List.of(dirs.get(1), dirs.get(2)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createFooBuilder(version).
@@ -534,18 +533,18 @@ public class PartitionChangeBuilderTest {
     @MethodSource("partitionChangeRecordVersions")
     public void testAddingReplicaReassignment(short version) {
         PartitionReassignmentReplicas replicas = new PartitionReassignmentReplicas(
-            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(Arrays.asList(1, 2, 3, 4)));
-        assertEquals(Collections.emptyList(), replicas.removing());
-        assertEquals(Collections.singletonList(4), replicas.adding());
-        assertEquals(Arrays.asList(1, 2, 3, 4), replicas.replicas());
+            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(List.of(1, 2, 3, 4)));
+        assertEquals(List.of(), replicas.removing());
+        assertEquals(List.of(4), replicas.adding());
+        assertEquals(List.of(1, 2, 3, 4), replicas.replicas());
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(1, 2, 3, 4)).
-                setAddingReplicas(Collections.singletonList(4));
+                setReplicas(List.of(1, 2, 3, 4)).
+                setAddingReplicas(List.of(4));
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(FOO.replicas, FOO.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(1), dirs.get(2), dirs.get(3), DirectoryId.UNASSIGNED));
+            expectedRecord.setDirectories(List.of(dirs.get(1), dirs.get(2), dirs.get(3), DirectoryId.UNASSIGNED));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createFooBuilder(version).
@@ -561,7 +560,7 @@ public class PartitionChangeBuilderTest {
             new PartitionChangeRecord()
                 .setTopicId(FOO_ID)
                 .setPartitionId(0)
-                .setIsr(Collections.singletonList(2))
+                .setIsr(List.of(2))
                 .setLeader(2)
                 .setLeaderRecoveryState(LeaderRecoveryState.RECOVERING.value()),
             version
@@ -569,20 +568,20 @@ public class PartitionChangeBuilderTest {
         assertEquals(
             Optional.of(expectedRecord),
             createFooBuilder(version).setElection(Election.UNCLEAN)
-                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Collections.singletonList(3))).build()
+                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(3))).build()
         );
 
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(OFFLINE_ID)
             .setPartitionId(0)
-            .setIsr(Collections.singletonList(1))
+            .setIsr(List.of(1))
             .setLeader(1)
             .setLeaderRecoveryState(LeaderRecoveryState.RECOVERING.value());
 
         if (version >= 2) {
-            // The test partition has ELR, so unclean election will clear these fiedls.
-            record.setEligibleLeaderReplicas(Collections.emptyList())
-                .setLastKnownElr(Collections.emptyList());
+            // The test partition has ELR, so unclean election will clear these fields.
+            record.setEligibleLeaderReplicas(List.of())
+                .setLastKnownElr(List.of());
         }
 
         expectedRecord = new ApiMessageAndVersion(record, version);
@@ -594,13 +593,12 @@ public class PartitionChangeBuilderTest {
         assertEquals(
             Optional.of(expectedRecord),
             createOfflineBuilder(version).setElection(Election.UNCLEAN)
-                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Collections.singletonList(2))).build()
+                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2))).build()
         );
     }
 
-    @ParameterizedTest
-    @ValueSource(booleans = {true, false})
-    public void testChangeInLeadershipDoesNotChangeRecoveryState(boolean isLeaderRecoverySupported) {
+    @Test
+    public void testChangeInLeadershipDoesNotChangeRecoveryState() {
         final byte noChange = (byte) -1;
         int leaderId = 1;
         LeaderRecoveryState recoveryState = LeaderRecoveryState.RECOVERING;
@@ -618,7 +616,7 @@ public class PartitionChangeBuilderTest {
             setPartitionEpoch(200).
             build();
 
-        MetadataVersion metadataVersion = leaderRecoveryMetadataVersion(isLeaderRecoverySupported);
+        MetadataVersion metadataVersion = MetadataVersion.MINIMUM_VERSION;
 
         // Change the partition so that there is no leader
         PartitionChangeBuilder offlineBuilder = new PartitionChangeBuilder(
@@ -630,7 +628,7 @@ public class PartitionChangeBuilderTest {
             2
         );
         // Set the target ISR to empty to indicate that the last leader is offline
-        offlineBuilder.setTargetIsrWithBrokerStates(Collections.emptyList());
+        offlineBuilder.setTargetIsrWithBrokerStates(List.of());
 
         // The partition should stay as recovering
         PartitionChangeRecord changeRecord = (PartitionChangeRecord) offlineBuilder
@@ -667,10 +665,8 @@ public class PartitionChangeBuilderTest {
         assertEquals(recoveryState, registration.leaderRecoveryState);
     }
 
-    @ParameterizedTest
-    @ValueSource(booleans = {true, false})
-    void testUncleanSetsLeaderRecoveringState(boolean isLeaderRecoverySupported) {
-        final byte noChange = (byte) -1;
+    @Test
+    void testUncleanSetsLeaderRecoveringState() {
         int leaderId = 1;
         PartitionRegistration registration = new PartitionRegistration.Builder().
             setReplicas(new int[] {leaderId, leaderId + 1, leaderId + 2}).
@@ -686,7 +682,7 @@ public class PartitionChangeBuilderTest {
             setPartitionEpoch(200).
             build();
 
-        MetadataVersion metadataVersion = leaderRecoveryMetadataVersion(isLeaderRecoverySupported);
+        MetadataVersion metadataVersion = MetadataVersion.MINIMUM_VERSION;
 
         // Change the partition using unclean leader election
         PartitionChangeBuilder onlineBuilder = new PartitionChangeBuilder(
@@ -703,26 +699,16 @@ public class PartitionChangeBuilderTest {
             .get()
             .message();
 
-        byte expectedRecoveryChange = noChange;
-        if (isLeaderRecoverySupported) {
-            expectedRecoveryChange = LeaderRecoveryState.RECOVERING.value();
-        }
-
-        assertEquals(expectedRecoveryChange, changeRecord.leaderRecoveryState());
+        assertEquals(LeaderRecoveryState.RECOVERING.value(), changeRecord.leaderRecoveryState());
         assertEquals(leaderId, changeRecord.leader());
         assertEquals(1, changeRecord.isr().size());
         assertEquals(leaderId, changeRecord.isr().get(0));
 
         registration = registration.merge(changeRecord);
 
-        LeaderRecoveryState expectedRecovery = LeaderRecoveryState.RECOVERED;
-        if (isLeaderRecoverySupported) {
-            expectedRecovery = LeaderRecoveryState.RECOVERING;
-        }
-
         assertEquals(leaderId, registration.leader);
         assertEquals(leaderId, registration.isr[0]);
-        assertEquals(expectedRecovery, registration.leaderRecoveryState);
+        assertEquals(LeaderRecoveryState.RECOVERING, registration.leaderRecoveryState);
     }
 
     @Test
@@ -770,7 +756,7 @@ public class PartitionChangeBuilderTest {
             topicId,
             0,
             isValidLeader,
-            leaderRecoveryMetadataVersion(false),
+            MetadataVersion.MINIMUM_VERSION,
             2
         );
 
@@ -780,22 +766,14 @@ public class PartitionChangeBuilderTest {
         assertEquals(Optional.of(new ApiMessageAndVersion(new PartitionChangeRecord().
                 setTopicId(topicId).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(2, 3)).
-                setIsr(Arrays.asList(2, 3)).
-                setRemovingReplicas(Collections.emptyList()).
-                setAddingReplicas(Collections.emptyList()).
+                setReplicas(List.of(2, 3)).
+                setIsr(List.of(2, 3)).
+                setRemovingReplicas(List.of()).
+                setAddingReplicas(List.of()).
                 setLeader(NO_LEADER),
                 (short) 0)),
-            partitionChangeBuilder.setTargetIsr(Arrays.asList(0, 1, 2, 3)).
+            partitionChangeBuilder.setTargetIsr(List.of(0, 1, 2, 3)).
                 build());
-    }
-
-    private MetadataVersion leaderRecoveryMetadataVersion(boolean isSupported) {
-        if (isSupported) {
-            return MetadataVersion.IBP_3_2_IV0;
-        } else {
-            return MetadataVersion.IBP_3_1_IV0;
-        }
     }
 
     @ParameterizedTest
@@ -824,16 +802,16 @@ public class PartitionChangeBuilderTest {
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
         // Update ISR to {1, 2}
-        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2)));
+        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2)));
 
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Arrays.asList(1, 2))
+            .setIsr(List.of(1, 2))
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
         if (version >= 2) {
-            record.setEligibleLeaderReplicas(Arrays.asList(3, 4));
+            record.setEligibleLeaderReplicas(List.of(3, 4));
         }
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(record, version);
         assertEquals(Optional.of(expectedRecord), builder.build());
@@ -875,17 +853,17 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
-        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2, 3)));
+        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2, 3)));
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Arrays.asList(1, 2, 3))
+            .setIsr(List.of(1, 2, 3))
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
 
         // Both versions will set the elr and lastKnownElr as empty list.
-        record.setEligibleLeaderReplicas(Collections.emptyList())
-            .setLastKnownElr(Collections.emptyList());
+        record.setEligibleLeaderReplicas(List.of())
+            .setLastKnownElr(List.of());
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(record, version);
         assertEquals(Optional.of(expectedRecord), builder.build());
         partition = partition.merge((PartitionChangeRecord) builder.build().get().message());
@@ -921,16 +899,16 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
-        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 4)));
+        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 4)));
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Arrays.asList(1, 4))
+            .setIsr(List.of(1, 4))
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
         if (version < 2) {
-            record.setEligibleLeaderReplicas(Collections.emptyList());
-            record.setLastKnownElr(Collections.emptyList());
+            record.setEligibleLeaderReplicas(List.of());
+            record.setLastKnownElr(List.of());
         }
         // No change is expected to ELR/LastKnownElr.
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(record, version);
@@ -973,7 +951,7 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
-        builder.setUncleanShutdownReplicas(Collections.singletonList(3));
+        builder.setUncleanShutdownReplicas(List.of(3));
 
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
@@ -981,10 +959,10 @@ public class PartitionChangeBuilderTest {
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
         if (version >= 2) {
-            record.setEligibleLeaderReplicas(Collections.singletonList(2))
-                .setLastKnownElr(Collections.singletonList(3));
+            record.setEligibleLeaderReplicas(List.of(2))
+                .setLastKnownElr(List.of(3));
         } else {
-            record.setEligibleLeaderReplicas(Collections.emptyList());
+            record.setEligibleLeaderReplicas(List.of());
         }
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(record, version);
         assertEquals(Optional.of(expectedRecord), builder.build());
@@ -1015,7 +993,7 @@ public class PartitionChangeBuilderTest {
                 build();
         Optional<ApiMessageAndVersion> built = new PartitionChangeBuilder(registration, FOO_ID,
                 0, r -> true, MetadataVersion.IBP_3_7_IV2, 2).
-                setTargetReplicas(Arrays.asList(3, 1, 5, 4)).
+                setTargetReplicas(List.of(3, 1, 5, 4)).
                 setDirectory(5, Uuid.fromString("RNJ5oFjjSSWMMFRwqdCfJg")).
                 setDefaultDirProvider(DEFAULT_DIR_PROVIDER).
                 build();
@@ -1024,8 +1002,8 @@ public class PartitionChangeBuilderTest {
                         setTopicId(FOO_ID).
                         setPartitionId(0).
                         setLeader(1).
-                        setReplicas(Arrays.asList(3, 1, 5, 4)).
-                        setDirectories(Arrays.asList(
+                        setReplicas(List.of(3, 1, 5, 4)).
+                        setDirectories(List.of(
                                 Uuid.fromString("fM5NKyWTQHqEihjIkUl99Q"),
                                 Uuid.fromString("iU2znv45Q9yQkOpkTSy3jA"),
                                 Uuid.fromString("RNJ5oFjjSSWMMFRwqdCfJg"),
@@ -1061,7 +1039,7 @@ public class PartitionChangeBuilderTest {
                 new PartitionChangeRecord().
                         setTopicId(FOO_ID).
                         setPartitionId(0).
-                        setDirectories(Arrays.asList(
+                        setDirectories(List.of(
                                 Uuid.fromString("S1zMYZczRjWmucidLqGA5g"),
                                 DirectoryId.LOST,
                                 Uuid.fromString("pN1VKs9zRzK4APflpegAVg")
@@ -1096,14 +1074,14 @@ public class PartitionChangeBuilderTest {
             .setUseLastKnownLeaderInBalancedRecovery(lastKnownLeaderEnabled)
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER);
 
-        builder.setTargetIsr(Collections.emptyList());
+        builder.setTargetIsr(List.of());
 
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(
             new PartitionChangeRecord()
                 .setTopicId(topicId)
                 .setPartitionId(0)
-                .setIsr(Collections.singletonList(3))
-                .setEligibleLeaderReplicas(Collections.singletonList(1))
+                .setIsr(List.of(3))
+                .setEligibleLeaderReplicas(List.of(1))
                 .setLeader(3)
                 .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE),
             version
@@ -1145,18 +1123,18 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(lastKnownLeaderEnabled);
 
-        builder.setTargetIsr(Collections.emptyList());
+        builder.setTargetIsr(List.of());
 
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Collections.emptyList())
+            .setIsr(List.of())
             .setLeader(-1)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE)
-            .setEligibleLeaderReplicas(Arrays.asList(1, 2, 3, 4));
+            .setEligibleLeaderReplicas(List.of(1, 2, 3, 4));
 
         if (lastKnownLeaderEnabled) {
-            record.setLastKnownElr(Collections.singletonList(1));
+            record.setLastKnownElr(List.of(1));
         }
 
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(record, version);
@@ -1169,7 +1147,7 @@ public class PartitionChangeBuilderTest {
                     metadataVersionForPartitionChangeRecordVersion(version), 3)
                 .setElection(Election.PREFERRED)
                 .setEligibleLeaderReplicasEnabled(true)
-                .setUncleanShutdownReplicas(Collections.singletonList(2))
+                .setUncleanShutdownReplicas(List.of(2))
                 .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
                 .setUseLastKnownLeaderInBalancedRecovery(lastKnownLeaderEnabled);
             PartitionChangeRecord changeRecord = (PartitionChangeRecord) builder.build().get().message();
@@ -1203,16 +1181,16 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setEligibleLeaderReplicasEnabled(true);
 
-        builder.setTargetIsr(Collections.emptyList());
+        builder.setTargetIsr(List.of());
 
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(
             new PartitionChangeRecord()
                 .setTopicId(topicId)
                 .setPartitionId(0)
-                .setIsr(Collections.singletonList(1))
+                .setIsr(List.of(1))
                 .setLeader(1)
                 .setLeaderRecoveryState(LeaderRecoveryState.RECOVERING.value())
-                .setLastKnownElr(Collections.emptyList()),
+                .setLastKnownElr(List.of()),
             version
         );
         assertEquals(Optional.of(expectedRecord), builder.build());
@@ -1250,7 +1228,7 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(true);
 
-        builder.setTargetIsr(Collections.emptyList());
+        builder.setTargetIsr(List.of());
 
         // No change to the partition.
         assertEquals(Optional.empty(), builder.build());
