@@ -51,6 +51,7 @@ import org.apache.kafka.common.record.MemoryRecordsBuilder;
 import org.apache.kafka.common.record.Records;
 import org.apache.kafka.common.record.TimestampType;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
+import org.apache.kafka.server.common.OffsetAndEpoch;
 
 import com.fasterxml.jackson.databind.JsonNode;
 
@@ -61,11 +62,10 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -75,6 +75,8 @@ public class RaftUtilTest {
     private final ListenerName listenerName = ListenerName.forSecurityProtocol(SecurityProtocol.PLAINTEXT);
     private final InetSocketAddress address = InetSocketAddress.createUnresolved("localhost", 9990);
     private final String clusterId = "I4ZmrWqfT2e-upky_4fdPA";
+    private static final Uuid TEST_DIRECTORY_ID1 = Uuid.randomUuid();
+    private static final Uuid TEST_DIRECTORY_ID2 = Uuid.randomUuid();
 
     @Test
     public void testErrorResponse() {
@@ -93,13 +95,6 @@ public class RaftUtilTest {
 
     private static Stream<Arguments> singletonFetchRequestTestCases() {
         return Stream.of(
-                Arguments.of(new FetchRequestTestCase(Uuid.ZERO_UUID, (short) 0, (short) -1,
-                        "{\"replicaId\":-1,\"maxWaitMs\":0,\"minBytes\":0,\"topics\":[{\"topic\":\"topic\"," +
-                            "\"partitions\":[{\"partition\":2,\"fetchOffset\":333,\"partitionMaxBytes\":10}]}]}")),
-                Arguments.of(new FetchRequestTestCase(Uuid.ZERO_UUID, (short) 3, (short) -1,
-                        "{\"replicaId\":-1,\"maxWaitMs\":0,\"minBytes\":0,\"maxBytes\":2147483647," +
-                            "\"topics\":[{\"topic\":\"topic\",\"partitions\":[{\"partition\":2,\"fetchOffset\":333," +
-                            "\"partitionMaxBytes\":10}]}]}")),
                 Arguments.of(new FetchRequestTestCase(Uuid.ZERO_UUID, (short) 4, (short) -1,
                         "{\"replicaId\":-1,\"maxWaitMs\":0,\"minBytes\":0,\"maxBytes\":2147483647,\"isolationLevel\":0," +
                             "\"topics\":[{\"topic\":\"topic\",\"partitions\":[{\"partition\":2,\"fetchOffset\":333," +
@@ -139,12 +134,6 @@ public class RaftUtilTest {
 
     private static Stream<Arguments> singletonFetchResponseTestCases() {
         return Stream.of(
-                Arguments.of(new FetchResponseTestCase((short) 0, -1,
-                        "{\"responses\":[{\"topic\":\"topic\",\"partitions\":[{\"partitionIndex\":1," +
-                            "\"errorCode\":0,\"highWatermark\":1000,\"records\":\"\"}]}]}")),
-                Arguments.of(new FetchResponseTestCase((short) 1, -1,
-                        "{\"throttleTimeMs\":0,\"responses\":[{\"topic\":\"topic\",\"partitions\":" +
-                            "[{\"partitionIndex\":1,\"errorCode\":0,\"highWatermark\":1000,\"records\":\"\"}]}]}")),
                 Arguments.of(new FetchResponseTestCase((short) 4, -1,
                         "{\"throttleTimeMs\":0,\"responses\":[{\"topic\":\"topic\",\"partitions\":" +
                             "[{\"partitionIndex\":1,\"errorCode\":0,\"highWatermark\":1000,\"lastStableOffset\":900," +
@@ -187,13 +176,26 @@ public class RaftUtilTest {
         return Stream.of(
                 Arguments.of((short) 0,
                         "{\"clusterId\":\"I4ZmrWqfT2e-upky_4fdPA\",\"topics\":[{\"topicName\":\"topic\"," +
-                            "\"partitions\":[{\"partitionIndex\":1,\"candidateEpoch\":1,\"candidateId\":1," +
+                            "\"partitions\":[{\"partitionIndex\":1,\"replicaEpoch\":1,\"replicaId\":1," +
                             "\"lastOffsetEpoch\":1000,\"lastOffset\":1000}]}]}"),
                 Arguments.of((short) 1,
                         "{\"clusterId\":\"I4ZmrWqfT2e-upky_4fdPA\",\"voterId\":2,\"topics\":[{" +
-                            "\"topicName\":\"topic\",\"partitions\":[{\"partitionIndex\":1,\"candidateEpoch\":1," +
-                            "\"candidateId\":1,\"candidateDirectoryId\":\"AAAAAAAAAAAAAAAAAAAAAQ\"," +
-                            "\"voterDirectoryId\":\"AAAAAAAAAAAAAAAAAAAAAQ\",\"lastOffsetEpoch\":1000,\"lastOffset\":1000}]}]}")
+                            "\"topicName\":\"topic\",\"partitions\":[{\"partitionIndex\":1,\"replicaEpoch\":1," +
+                            "\"replicaId\":1,\"replicaDirectoryId\":\"" + TEST_DIRECTORY_ID1 + "\"," +
+                            "\"voterDirectoryId\":\"" + TEST_DIRECTORY_ID2 + "\",\"lastOffsetEpoch\":1000," +
+                            "\"lastOffset\":1000}]}]}"),
+                Arguments.of((short) 2,
+                        "{\"clusterId\":\"I4ZmrWqfT2e-upky_4fdPA\",\"voterId\":2,\"topics\":[{" +
+                            "\"topicName\":\"topic\",\"partitions\":[{\"partitionIndex\":1,\"replicaEpoch\":1," +
+                            "\"replicaId\":1,\"replicaDirectoryId\":\"" + TEST_DIRECTORY_ID1 + "\"," +
+                            "\"voterDirectoryId\":\"" + TEST_DIRECTORY_ID2 + "\",\"lastOffsetEpoch\":1000," +
+                            "\"lastOffset\":1000,\"preVote\":true}]}]}"),
+                Arguments.of((short) 2,
+                        "{\"clusterId\":\"I4ZmrWqfT2e-upky_4fdPA\",\"voterId\":2,\"topics\":[{" +
+                            "\"topicName\":\"topic\",\"partitions\":[{\"partitionIndex\":1,\"replicaEpoch\":1," +
+                            "\"replicaId\":1,\"replicaDirectoryId\":\"" + TEST_DIRECTORY_ID1 + "\"," +
+                            "\"voterDirectoryId\":\"" + TEST_DIRECTORY_ID2 + "\",\"lastOffsetEpoch\":1000," +
+                            "\"lastOffset\":1000,\"preVote\":true}]}]}")
         );
     }
 
@@ -203,6 +205,10 @@ public class RaftUtilTest {
                         "{\"errorCode\":0,\"topics\":[{\"topicName\":\"topic\",\"partitions\":[{" +
                             "\"partitionIndex\":0,\"errorCode\":0,\"leaderId\":1,\"leaderEpoch\":1,\"voteGranted\":true}]}]}"),
                 Arguments.of((short) 1,
+                        "{\"errorCode\":0,\"topics\":[{\"topicName\":\"topic\",\"partitions\":[{" +
+                            "\"partitionIndex\":0,\"errorCode\":0,\"leaderId\":1,\"leaderEpoch\":1,\"voteGranted\":true}]}]," +
+                            "\"nodeEndpoints\":[{\"nodeId\":1,\"host\":\"localhost\",\"port\":9990}]}"),
+                Arguments.of((short) 2,
                         "{\"errorCode\":0,\"topics\":[{\"topicName\":\"topic\",\"partitions\":[{" +
                             "\"partitionIndex\":0,\"errorCode\":0,\"leaderId\":1,\"leaderEpoch\":1,\"voteGranted\":true}]}]," +
                             "\"nodeEndpoints\":[{\"nodeId\":1,\"host\":\"localhost\",\"port\":9990}]}")
@@ -335,6 +341,29 @@ public class RaftUtilTest {
         assertEquals(testCase.expectedJson, json.toString());
     }
 
+    // Test that the replicaDirectoryId field introduced in version 17 is ignorable for older versions.
+    // This is done by setting a FetchPartition's replicaDirectoryId explicitly to a non-zero uuid and
+    // checking that the FetchRequestData can still be written to an older version specified by
+    // testCase.version.
+    @ParameterizedTest
+    @MethodSource("singletonFetchRequestTestCases")
+    public void testFetchRequestV17Compatibility(final FetchRequestTestCase testCase) {
+        FetchRequestData fetchRequestData = RaftUtil.singletonFetchRequest(
+            topicPartition,
+            Uuid.ONE_UUID,
+            partition -> partition
+                .setPartitionMaxBytes(10)
+                .setCurrentLeaderEpoch(5)
+                .setFetchOffset(333)
+                .setLastFetchedEpoch(testCase.lastFetchedEpoch)
+                .setPartition(2)
+                .setReplicaDirectoryId(Uuid.ONE_UUID)
+                .setLogStartOffset(0)
+        );
+        JsonNode json = FetchRequestDataJsonConverter.write(fetchRequestData, testCase.version);
+        assertEquals(testCase.expectedJson, json.toString());
+    }
+
     @ParameterizedTest
     @MethodSource("singletonFetchResponseTestCases")
     public void testSingletonFetchResponseForAllVersion(final FetchResponseTestCase testCase) {
@@ -363,7 +392,7 @@ public class RaftUtilTest {
                         .setSnapshotId(new FetchResponseData.SnapshotId())
                         .setErrorCode(Errors.NONE.code())
                         .setCurrentLeader(new FetchResponseData.LeaderIdAndEpoch())
-                        .setAbortedTransactions(singletonList(
+                        .setAbortedTransactions(List.of(
                                 new FetchResponseData.AbortedTransaction()
                                         .setProducerId(producerId)
                                         .setFirstOffset(firstOffset)
@@ -377,18 +406,19 @@ public class RaftUtilTest {
     @ParameterizedTest
     @MethodSource("voteRequestTestCases")
     public void testSingletonVoteRequestForAllVersion(final short version, final String expectedJson) {
-        int candidateEpoch = 1;
+        int replicaEpoch = 1;
         int lastEpoch = 1000;
         long lastEpochOffset = 1000;
 
         VoteRequestData voteRequestData = RaftUtil.singletonVoteRequest(
-                topicPartition,
-                clusterId,
-                candidateEpoch,
-                ReplicaKey.of(1, Uuid.ONE_UUID),
-                ReplicaKey.of(2, Uuid.ONE_UUID),
-                lastEpoch,
-                lastEpochOffset
+            topicPartition,
+            clusterId,
+            replicaEpoch,
+            ReplicaKey.of(1, TEST_DIRECTORY_ID1),
+            ReplicaKey.of(2, TEST_DIRECTORY_ID2),
+            lastEpoch,
+            lastEpochOffset,
+            version >= 2
         );
         JsonNode json = VoteRequestDataJsonConverter.write(voteRequestData, version);
         assertEquals(expectedJson, json.toString());
@@ -409,7 +439,7 @@ public class RaftUtilTest {
                 leaderEpoch,
                 leaderId,
                 true,
-                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address))
+                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address))
         );
         JsonNode json = VoteResponseDataJsonConverter.write(voteResponseData, version);
         assertEquals(expectedJson, json.toString());
@@ -437,6 +467,35 @@ public class RaftUtilTest {
         assertEquals(expectedJson, json.toString());
     }
 
+    // Test that the replicaDirectoryId field introduced in version 1 is ignorable for version 0
+    // This is done by setting a FetchPartition's replicaDirectoryId explicitly to a non-zero uuid and
+    // checking that the FetchSnapshotRequestData can still be written to an older version specified by
+    // testCase.version.
+    @ParameterizedTest
+    @MethodSource("fetchSnapshotRequestTestCases")
+    public void testSingletonFetchSnapshotRequestV1Compatibility(
+        short version,
+        Uuid directoryId,
+        String expectedJson
+    ) {
+        int epoch = 1;
+        int maxBytes = 1000;
+        int position = 10;
+
+        FetchSnapshotRequestData fetchSnapshotRequestData = RaftUtil.singletonFetchSnapshotRequest(
+            clusterId,
+            ReplicaKey.of(1, directoryId),
+            topicPartition,
+            epoch,
+            new OffsetAndEpoch(10, epoch),
+            maxBytes,
+            position
+        );
+        fetchSnapshotRequestData.topics().get(0).partitions().get(0).setReplicaDirectoryId(Uuid.ONE_UUID);
+        JsonNode json = FetchSnapshotRequestDataJsonConverter.write(fetchSnapshotRequestData, version);
+        assertEquals(expectedJson, json.toString());
+    }
+
     @ParameterizedTest
     @MethodSource("fetchSnapshotResponseTestCases")
     public void testSingletonFetchSnapshotResponseForAllVersion(final short version, final String expectedJson) {
@@ -447,7 +506,7 @@ public class RaftUtilTest {
                 version,
                 topicPartition,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address)),
+                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address)),
                 responsePartitionSnapshot -> responsePartitionSnapshot
         );
 
@@ -466,7 +525,7 @@ public class RaftUtilTest {
                 clusterId,
                 leaderEpoch,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address)),
+                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address)),
                 ReplicaKey.of(1, Uuid.ONE_UUID)
         );
         JsonNode json = BeginQuorumEpochRequestDataJsonConverter.write(beginQuorumEpochRequestData, version);
@@ -487,7 +546,7 @@ public class RaftUtilTest {
                 Errors.NONE,
                 leaderEpoch,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address))
+                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address))
         );
         JsonNode json = BeginQuorumEpochResponseDataJsonConverter.write(beginQuorumEpochResponseData, version);
         assertEquals(expectedJson, json.toString());
@@ -504,7 +563,7 @@ public class RaftUtilTest {
                 clusterId,
                 leaderEpoch,
                 leaderId,
-                singletonList(ReplicaKey.of(1, Uuid.ONE_UUID))
+                List.of(ReplicaKey.of(1, Uuid.ONE_UUID))
         );
         JsonNode json = EndQuorumEpochRequestDataJsonConverter.write(endQuorumEpochRequestData, version);
         assertEquals(expectedJson, json.toString());
@@ -524,7 +583,7 @@ public class RaftUtilTest {
                 Errors.NONE,
                 leaderEpoch,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address))
+                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address))
         );
         JsonNode json = EndQuorumEpochResponseDataJsonConverter.write(endQuorumEpochResponseData, version);
         assertEquals(expectedJson, json.toString());
@@ -554,8 +613,8 @@ public class RaftUtilTest {
                 leaderId,
                 leaderEpoch,
                 highWatermark,
-                Collections.singletonList(replicaState),
-                Collections.singletonList(replicaState),
+                List.of(replicaState),
+                List.of(replicaState),
                 0
         );
         JsonNode json = DescribeQuorumResponseDataJsonConverter.write(describeQuorumResponseData, version);
