@@ -26,7 +26,6 @@ import org.apache.kafka.tiered.storage.utils.BrokerLocalStorage;
 
 import java.io.File;
 import java.io.PrintStream;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
@@ -47,22 +46,22 @@ public final class AlterLogDirAction implements TieredStorageTestAction {
     @Override
     public void doExecute(TieredStorageTestContext context) throws InterruptedException, ExecutionException, TimeoutException {
         Optional<BrokerLocalStorage> localStorage = context.localStorages().stream().filter(storage -> storage.getBrokerId() == brokerId).findFirst();
-        if (!localStorage.isPresent()) {
+        if (localStorage.isEmpty()) {
             throw new IllegalArgumentException("cannot find local storage for this topic partition:" + topicPartition + " in this broker id:" + brokerId);
         }
 
         Optional<File> sourceDir = localStorage.get().getBrokerStorageDirectories().stream().filter(dir -> localStorage.get().dirContainsTopicPartition(topicPartition, dir)).findFirst();
-        if (!sourceDir.isPresent()) {
+        if (sourceDir.isEmpty()) {
             throw new IllegalArgumentException("No log dir with topic partition:" + topicPartition + " in this broker id:" + brokerId);
         }
         Optional<File> targetDir = localStorage.get().getBrokerStorageDirectories().stream().filter(dir -> !localStorage.get().dirContainsTopicPartition(topicPartition, dir)).findFirst();
-        if (!targetDir.isPresent()) {
+        if (targetDir.isEmpty()) {
             throw new IllegalArgumentException("No log dir without topic partition:" + topicPartition + " in this broker id:" + brokerId);
         }
 
         // build alterReplicaLogDirs request content to move from sourceDir to targetDir
         TopicPartitionReplica topicPartitionReplica = new TopicPartitionReplica(topicPartition.topic(), topicPartition.partition(), brokerId);
-        Map<TopicPartitionReplica, String> logDirs = Collections.singletonMap(topicPartitionReplica, targetDir.get().getAbsolutePath());
+        Map<TopicPartitionReplica, String> logDirs = Map.of(topicPartitionReplica, targetDir.get().getAbsolutePath());
 
         AlterReplicaLogDirsResult results = context.admin().alterReplicaLogDirs(logDirs);
         results.values().get(topicPartitionReplica).get(30, TimeUnit.SECONDS);
